# soka

./: .env  .eslintrc.json  .gitignore  main.py  package.json  pyproject.toml  requirements.txt  token.txt
cogs/: anime.py  dev.py  fun.py  misc.py  moderation.py  music.py
