[tool.poetry]
name = "repl_nix_smthVirus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.3"
requests = "^2.31.0"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
