[tool.poetry]
name = "repl_nix_soka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.0"
googletrans = "^3.0.0"
"nekos.py" = "^1.1.0"
requests = "^2.31.0"
youtube_dl = "^2021.12.17"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
